; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Threads.c_Semaphore_Create.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Threads.c_Semaphore_Create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Semaphore_Create(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = trunc i64 %7 to i32
  %9 = load i64, i64* %6, align 8
  %10 = trunc i64 %9 to i32
  %11 = call i32 @CreateSemaphore(i32* null, i32 %8, i32 %10, i32* null)
  %12 = load i32*, i32** %4, align 8
  store i32 %11, i32* %12, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @HandleToWRes(i32 %14)
  ret i32 %15
}

declare dso_local i32 @CreateSemaphore(i32*, i32, i32, i32*) #1

declare dso_local i32 @HandleToWRes(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
